# fast-sandbox

./: .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_ZH.md  Makefile  README.md  README_ZH.md  go.mod  go.sum
api/v1alpha1/: compat.go  compat_test.go  doc.go  resource_profile.go  sandbox_types.go  sandboxpool_types.go  validation.go  validation_test.go  zz_generated.deepcopy.go
cmd/agent/: main.go
cmd/boxlite-runtime/: backend_native.go  backend_native_test.go  backend_unsupported.go  main.go  main_test.go
cmd/controller/: main.go
cmd/fastctl/: README.md  main.go
cmd/fastlet/: main.go
cmd/fastlet-proxy/: main.go
cmd/janitor/: main.go
cmd/sandbox-init/: main.go
cmd/sandbox-proxy/: main.go
cmd/sandbox-tunnel/: main.go
config/all-in-one/: README.md  controller-all-in-one.yaml  controller-pdb-all-in-one.yaml  kustomization.yaml  service-all-in-one.yaml
config/crd/: kustomization.yaml  sandbox.fast.io_sandboxes.yaml  (+1 more)
docs/: PERFORMANCE.md  README.md  TESTING.md  boxlite-integration-roadmap.md  kata-firecracker-investigation.md  migration-guide.md  observability.md  opensandbox-execd-integration-guide.md  post-refactor-open-issues.md  refactor-completion-audit.md  release-acceptance-report.md  secure-container-reference.md  secure-runtime-support-design.md
sdk/python/: README.md  generate_proto.sh  pyproject.toml
sdk/python/fast_sandbox/: __init__.py  client.py  envd.py  execd.py  files.py  route.py  sandbox.py  telemetry.py
sdk/python/fast_sandbox/proto/: __init__.py  fastpath_pb2.py  fastpath_pb2_grpc.py
sdk/python/tests/: test_sdk.py
(+422 files in other folders)
